Fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Yii2 advanced optimized",
+    "name": "pa3py6aka/yii2-advanced-optimized",
     "description": "Yii2 optimized template based on advanced template",
     "keywords": ["Yii2, Yii2-advanced, Yii2 template", "Yii2 template", "Yii2 Bootstrap 4", "bootstrap 4"],
     "homepage": "http://yiiframework.com",
